--- a/gamepages/sexyparojp.html
+++ b/gamepages/sexyparojp.html
@@ -12,6 +12,9 @@
             <div id="game"></div>
         </div>
         <script>
+            window.onload = function() {
+                alert("WARNING!! This game is currently incompitable with the FinalBurn Neo core, so don't be surprised if it doesn't work.");
+            };
             EJS_player = "#game";
             EJS_core = "arcade";
             EJS_gameName = "Sexy Parodius [Arcade] (Japan)";
