--- a/gamepages/hyperbbceea.html
+++ b/gamepages/hyperbbceea.html
@@ -12,11 +12,11 @@
             <div id="game"></div>
         </div>
         <script>
-             window.onload = function() {
+            window.onload = function() {
                 alert("WARNING!! This game is currently incompitable with the FinalBurn Neo core, so don't be surprised if it doesn't work.");
             };
             EJS_player = "#game";
-            EJS_core = "mame2003";
+            EJS_core = "arcade";
             EJS_gameName = "Hyper Bishi Bashi Champ (VER. EAA)";
             EJS_color = "#0064ff";
             EJS_startOnLoaded = true;
