--- a/patchlog.html
+++ b/patchlog.html
@@ -94,8 +94,8 @@
       <h3>typical update</h3>
       <p>polished up the ui a lil' bit, added a new category, added roms to the following games: Super Bomberman (Japan), (USA), Sonic Rush (USA), Sparkster [Mega Drive], and added a bunch of new games!</p>
       <p>those being: Super Bomberman 2, 5, Metal Slug 1, 2, 3, 4, 5, 6 (not working), X, Sparkster [SNES], DoDonPachi, DoDonPachi Daifukkatsu, Space Invaders '95, Sexy Parodius (not working), and Sorcer Striker.</p>
+      <p>also if you couldnt tell im a little biased towards arcade games : ]</p>
     </div>
-    <div cla
   </div>
 </body>
 </html>
